CSS optimizations and fix on mobile

--- a/themes/material/css/list.css
+++ b/themes/material/css/list.css
@@ -13,6 +13,7 @@ ul li {
 }
 
 ul > a {
+    max-width: 100%;
     display: block;
 }
 
